{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 47,
  "lineage": "f18236b7-6661-3df7-e5c8-1b433b959370",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047fdcff6e51c3917",
            "arn": "arn:aws:ec2:us-east-1:067970016113:elastic-ip/eipalloc-047fdcff6e51c3917",
            "association_id": "eipassoc-0395ba22555d25572",
            "domain": "vpc",
            "id": "eipalloc-047fdcff6e51c3917",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e53f1b59c1c2c14c",
            "private_dns": "ip-10-0-0-29.ec2.internal",
            "private_ip": "10.0.0.29",
            "public_dns": "ec2-3-229-111-207.compute-1.amazonaws.com",
            "public_ip": "3.229.111.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ayman-eks-nat-eip"
            },
            "tags_all": {
              "Name": "ayman-eks-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:internet-gateway/igw-0b4ad1aab576ab1d6",
            "id": "igw-0b4ad1aab576ab1d6",
            "owner_id": "067970016113",
            "tags": {
              "Name": "ayman-eks-igw"
            },
            "tags_all": {
              "Name": "ayman-eks-igw"
            },
            "vpc_id": "vpc-074f3fcd785813a36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047fdcff6e51c3917",
            "association_id": "eipassoc-0395ba22555d25572",
            "connectivity_type": "public",
            "id": "nat-06e9faee0305f2dba",
            "network_interface_id": "eni-0e53f1b59c1c2c14c",
            "private_ip": "10.0.0.29",
            "public_ip": "3.229.111.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09c764dda0cff53f4",
            "tags": {
              "Name": "ayman-eks-nat"
            },
            "tags_all": {
              "Name": "ayman-eks-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_eip.nat",
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.eks_vpc",
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:route-table/rtb-0c415964c832fe70d",
            "id": "rtb-0c415964c832fe70d",
            "owner_id": "067970016113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e9faee0305f2dba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ayman-eks-private-rt"
            },
            "tags_all": {
              "Name": "ayman-eks-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-074f3fcd785813a36"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_eip.nat",
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_nat_gateway.nat",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.eks_vpc",
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:route-table/rtb-0ff10fc342752a611",
            "id": "rtb-0ff10fc342752a611",
            "owner_id": "067970016113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4ad1aab576ab1d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ayman-eks-public-rt"
            },
            "tags_all": {
              "Name": "ayman-eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-074f3fcd785813a36"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b62572b12924918",
            "route_table_id": "rtb-0c415964c832fe70d",
            "subnet_id": "subnet-09abab72b8a398369"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_eip.nat",
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_nat_gateway.nat",
            "module.eks_cluster.aws_route_table.private",
            "module.eks_cluster.aws_subnet.private",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.eks_vpc",
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0235cf42da17a05c4",
            "route_table_id": "rtb-0c415964c832fe70d",
            "subnet_id": "subnet-006c7edd9765805a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_eip.nat",
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_nat_gateway.nat",
            "module.eks_cluster.aws_route_table.private",
            "module.eks_cluster.aws_subnet.private",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.eks_vpc",
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02af3c9772d4e7ce8",
            "route_table_id": "rtb-0ff10fc342752a611",
            "subnet_id": "subnet-09c764dda0cff53f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_route_table.public",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.eks_vpc",
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:security-group/sg-08676c2043fa9860b",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08676c2043fa9860b",
            "ingress": [],
            "name": "terraform-20260208121214842200000001",
            "name_prefix": "terraform-",
            "owner_id": "067970016113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ayman-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "ayman-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074f3fcd785813a36"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-09abab72b8a398369",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09abab72b8a398369",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ayman-eks-private-subnet-0",
              "kubernetes.io/cluster/ayman-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ayman-eks-private-subnet-0",
              "kubernetes.io/cluster/ayman-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-074f3fcd785813a36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_vpc.eks_vpc",
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-006c7edd9765805a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006c7edd9765805a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ayman-eks-private-subnet-1",
              "kubernetes.io/cluster/ayman-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ayman-eks-private-subnet-1",
              "kubernetes.io/cluster/ayman-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-074f3fcd785813a36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_vpc.eks_vpc",
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-09c764dda0cff53f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c764dda0cff53f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ayman-eks-public-subnet",
              "kubernetes.io/cluster/ayman-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ayman-eks-public-subnet",
              "kubernetes.io/cluster/ayman-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-074f3fcd785813a36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_vpc.eks_vpc",
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:vpc/vpc-074f3fcd785813a36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a32b710a88ea836b",
            "default_route_table_id": "rtb-06410fa8c05679a27",
            "default_security_group_id": "sg-049a0f7ac07d9c8e0",
            "dhcp_options_id": "dopt-02a4642077c18bf56",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074f3fcd785813a36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06410fa8c05679a27",
            "owner_id": "067970016113",
            "tags": {
              "Name": "ayman-eks-vpc",
              "kubernetes.io/cluster/ayman-eks": "shared"
            },
            "tags_all": {
              "Name": "ayman-eks-vpc",
              "kubernetes.io/cluster/ayman-eks": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}